更新了歌曲详细页面

--- a/src/assets/css/iconfont/iconfont.css
+++ b/src/assets/css/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2911457 */
-  src: url('iconfont.woff2?t=1636106926669') format('woff2'),
-       url('iconfont.woff?t=1636106926669') format('woff'),
-       url('iconfont.ttf?t=1636106926669') format('truetype');
+  src: url('iconfont.woff2?t=1638257625281') format('woff2'),
+       url('iconfont.woff?t=1638257625281') format('woff'),
+       url('iconfont.ttf?t=1638257625281') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,26 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-xiazai1:before {
+  content: "\e60e";
+}
+
+.icon-24gl-folderHeart:before {
+  content: "\eabf";
+}
+
+.icon-woxihuande:before {
+  content: "\e65d";
+}
+
+.icon-fenxiang:before {
+  content: "\e606";
+}
+
+.icon-lianjie:before {
+  content: "\e7db";
 }
 
 .icon-redu:before {
