补充了搜索

--- a/src/assets/css/iconfont/iconfont.css
+++ b/src/assets/css/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2911457 */
-  src: url('iconfont.woff2?t=1638339123026') format('woff2'),
-       url('iconfont.woff?t=1638339123026') format('woff'),
-       url('iconfont.ttf?t=1638339123026') format('truetype');
+  src: url('iconfont.woff2?t=1638448525193') format('woff2'),
+       url('iconfont.woff?t=1638448525193') format('woff'),
+       url('iconfont.ttf?t=1638448525193') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-lajitong:before {
+  content: "\e637";
+}
+
+.icon-icon-test:before {
+  content: "\e6e0";
+}
+
+.icon-geshou:before {
+  content: "\e783";
 }
 
 .icon-huiyuanb:before {
