添加了一些动画组件，自己封装了相关的操作函数

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -38,4 +38,19 @@ a,a:active,a:visited,a:link,a:focus{
     text-decoration: none;
     user-select: none;
 }
-
+@keyframes circle {
+    from {
+      stroke-dashoffset: 597;
+    }
+    to {
+      stroke-dashoffset: 0;
+    }
+  }
+  @keyframes tick {
+    from {
+      stroke-dashoffset: 165;
+    }
+    to {
+      stroke-dashoffset: 0;
+    }
+  }
