--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -38,6 +38,15 @@ a,a:active,a:visited,a:link,a:focus{
     text-decoration: none;
     user-select: none;
 }
+::-webkit-scrollbar {
+  width: 6px;
+  /*height: 4px;*/
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.1);
+}
 @keyframes circle {
     from {
       stroke-dashoffset: 597;
